# infers-crate-reservations

./: README.md  publish.sh  reserved_crates
template/: Cargo.toml  README.md
